# astal-lua-gtk-template

./: .gitignore  .rgignore  README.md  flake.nix  meson.build  package.json  pnpm-lock.yaml  tsconfig.json
data/: desktop.in.desktop  gschema.in.xml
scripts/: build.sh  run.sh
scripts/lua/: bundle.lua  luagir.lua
src/: App.tsx  AppWindow.tsx  env.d.ts  init.in.lua  main.ts  settings.ts
src/lua/: globals.lua
